changed the second paragraph formatting (i figured out the problem)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,9 +272,11 @@ section .title::after{
     object-fit: cover;
     border-radius: 6px;
 }
+/*
 .information .information-content .right{
     width: 55%;
 }
+*/
 .information .information-content .right .text{
     font-size: 25px;
     font-weight: 600;
