--- a/assets/css/dictionary.css
+++ b/assets/css/dictionary.css
@@ -13,7 +13,7 @@ height: 100%;
 
 body{
     background: linear-gradient(to right top, #0b0c0f, #21252e) no-repeat;
-    color: rgb(89, 89, 89);
+    color: #007FFF;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -43,7 +43,7 @@ body{
     font-weight: bold;
     /* color: rgba(255, 255, 255, 0.9); */
     /* text-shadow: 2px 3px 0 rgba(255, 255, 255, 0.4); */
-    color: rgb(89, 89, 89);
+    color: #007FFF;
     text-shadow: 1px 3px 0 rgb(255, 255, 255);
     text-align: center;
     margin-bottom: 0.7em;
@@ -66,7 +66,7 @@ form .btn{
         rgba( 255, 255, 255, 0.2)
     );
     box-shadow: 0 8px 22px 0 rgba(31, 38, 135, 0.029);
-    color: rgb(89, 89, 89);
+    color: #007FFF;
     height: 35px;
     width: 150px;
     margin-left: .5em;
@@ -92,7 +92,7 @@ form #input{
     width: 100%;
     height: 35px;
     padding-left: 1em;
-    color: rgb(70, 70, 70);
+    color: #007FFF;
 }
 
 
@@ -111,11 +111,11 @@ div.board{
 div.board li{
     margin-left: 1.2em;
     margin-top: 1em;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 div.board h3{
-  font-size: 18px;
+  font-size: 12px;
   font-weight: 600;
 }
 
@@ -205,7 +205,7 @@ div.board p{
     }
 
     #main_board h1{
-        color: rgb(89, 89, 89);
+        color: #007FFF;
         text-shadow: 1px 3px 0 rgb(255, 255, 255);
     }
 
