--- a/assets/css/dictionary.css
+++ b/assets/css/dictionary.css
@@ -13,7 +13,7 @@ height: 100%;
 
 body{
     background: linear-gradient(to right top, #0b0c0f, #21252e) no-repeat;
-    color: #007FFF;
+    color: #111;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -22,19 +22,14 @@ body{
 }
 
 #main_board{
-    background: white;
-    background: linear-gradient(
-        to right bottom, 
-        rgba(255, 255, 255, 0.6), 
-        rgba( 255, 255, 255, 0.2)
-    );
+    background: #111;
     width: 90%;
     height: 90vh;
     margin-top: 2em;
     backdrop-filter: blur( 12.5px );
     -webkit-backdrop-filter: blur( 10px );
     border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.434);
+    border: 2px solid #007FFF;
     padding: 2em;
 }
 
@@ -43,8 +38,8 @@ body{
     font-weight: bold;
     /* color: rgba(255, 255, 255, 0.9); */
     /* text-shadow: 2px 3px 0 rgba(255, 255, 255, 0.4); */
-    color: #007FFF;
-    text-shadow: 1px 3px 0 rgb(255, 255, 255);
+    color: #111;
+    text-shadow: 1px 3px 0 #007FFF;
     text-align: center;
     margin-bottom: 0.7em;
     margin-top: -0.4em;
@@ -60,13 +55,9 @@ form{
 
 form .btn{
     /* background-color: white; */
-    background: linear-gradient(
-        to right bottom, 
-        rgba(255, 255, 255, 0.4), 
-        rgba( 255, 255, 255, 0.2)
-    );
-    box-shadow: 0 8px 22px 0 rgba(31, 38, 135, 0.029);
-    color: #007FFF;
+    background: #007FFF;
+    box-shadow: 0 8px 22px 0 #111;
+    color: #111;
     height: 35px;
     width: 150px;
     margin-left: .5em;
@@ -80,19 +71,15 @@ form .btn:focus{
 }
 
 form #input{
-    background: linear-gradient(
-        to right bottom, 
-        rgba(255, 255, 255, 0.4), 
-        rgba( 255, 255, 255, 0.3)
-    );
-    box-shadow: 0 8px 22px 0 rgba(31, 38, 135, 0.029);
+    background: #007FFF;
+    box-shadow: 0 8px 22px 0 #111;
     border: none;
     border-radius: 5px;
     outline: none;
     width: 100%;
     height: 35px;
     padding-left: 1em;
-    color: #007FFF;
+    color: #111;
 }
 
 
@@ -205,8 +192,8 @@ div.board p{
     }
 
     #main_board h1{
-        color: #007FFF;
-        text-shadow: 1px 3px 0 rgb(255, 255, 255);
+        color: #111;
+        text-shadow: 1px 3px 0 #007FFF;
     }
 
     .square{
