--- a/assets/css/dictionary.css
+++ b/assets/css/dictionary.css
@@ -22,7 +22,7 @@ body{
 }
 
 #main_board{
-    background: #fff;
+    background: #222;
     width: 90%;
     height: 90vh;
     margin-top: 2em;
@@ -34,17 +34,14 @@ body{
 #main_board  h1{
     font-size: 2em;
     font-weight: bold;
-    /* color: rgba(255, 255, 255, 0.9); */
-    /* text-shadow: 2px 3px 0 rgba(255, 255, 255, 0.4); */
-    color: #111;
-    text-shadow: 1px 3px 0 #007FFF;
+    color: #007FFF;
+    text-shadow: 1px 3px 0 #111;
     text-align: center;
     margin-bottom: 0.7em;
     margin-top: -0.4em;
     letter-spacing: 1px;
 }
 
-/* Stype form */
 form{
     display: flex;
     justify-content: center;
@@ -52,7 +49,6 @@ form{
 }
 
 form .btn{
-    /* background-color: white; */
     background: #007FFF;
     box-shadow: 0 8px 22px 0 #111;
     color: #111;
