--- a/assets/css/dictionary.css
+++ b/assets/css/dictionary.css
@@ -78,14 +78,10 @@ form #input{
 
 
 div.board{
-    background: linear-gradient(
-        to right bottom, 
-        rgba(255, 255, 255, 0.3), 
-        rgba( 255, 255, 255, 0.1)
-    );
+    background: #222;
     padding: 1em;
     border-radius: 10px;
-    box-shadow: 0 8px 22px 0 rgba(31, 38, 135, 0.057);
+    box-shadow: #007FFF;
     display: none;
 }
 
